Thu Sep 19 16:53:09 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makeconf (install) [all variants]: Depend on installation
	directory directly; don't make installed file depend on it.

Thu Sep 12 15:45:34 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (include $(addsuffix .d,$(subdirs))): New directive to
	get dependencies for directories included.
	($(addsuffix .d,$(subdirs))) New target.
	* Makeconf (library_deps): New variable.
	(directory-depend): New target.
	($(..)/$(dir).d): New target.
	($(target)) [doinst == one]: Depend on libraries from library_deps.
	($(libname).so) [makemode == library]: Likewise.
	
	* Makefile ($(prog-subdirs) $(lib-subdirs)): New rule.
	(%-all): Delete rule.
	(all): Depend on directory names without appended -all.

Sun Sep  8 14:21:57 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (prog-subdirs): Add storeio.

Fri Sep  6 17:00:23 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* INSTALL: Update to version 0.1.
	* README: Likewise.

Thu Sep  5 11:04:38 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
	
	* version.h: New file.
	* sh-version.sed: New file.
	* Makefile (DIST_FILES): Add version.h and sh-version.sed.

Wed Sep  4 16:25:24 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makeconf
	($(addprefix $(includedir)/$(installhdrsubdir)/,$(installhdrs))):
	`$(includdir)' --> `$(includedir)'

Wed Sep  4 08:56:04 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* configure.in (asm_syntax): New variable, canonicalized from
	host_cpu.  AC_SUBST it.
	* config.make.in (asm_syntax): New variable, from @asm_syntax@.

Sun Sep  1 14:03:20 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makeconf ($(target): %$(target-suffix)): Add dependency on
	$(BUGADDR), and $(BUGADDR_REF) to the flags.
	(BUGADDR, BUGADDR_REF): New variables.
	* Makefile (lib-subdirs): Add libhurdbugaddr.
	* libhurdbugaddr: New directory.
	
Thu Aug 29 14:14:04 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
