@@ -1,3 +1,8 @@
+Thu Sep 19 17:52:23 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* hurd.texi: Comment out sections related to Shared I/O.
+	Begin documenting fs.defs.
+
 Mon Aug  8 15:50:17 1994  Michael I Bushnell  <mib@churchy.gnu.ai.mit.edu>
 
 	* Makefile: Rewritten in accord with new scheme.
