@@ -1,3 +1,8 @@
+Thu Sep 19 17:18:11 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* Makefile (HURDLIBS): New variable.
+	(storeio): Deleted special dependencies.
+
 Fri Sep 13 11:05:06 1996  Miles Bader  <miles@gnu.ai.mit.edu>
 
 	* storeio.c (argp_program_version): New variable.
